{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 48,
  "lineage": "015be7db-41cf-8f63-81b0-3965737d37e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c2aa15ffa6e30944",
            "owner_id": "690683656197",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0937dad08efbf8f67"
          },
          "dependencies": [
            "aws_vpc.peer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_tf",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03dce5f1c2de996c5",
            "owner_id": "690683656197",
            "tags": {
              "Name": "igw_tf"
            },
            "vpc_id": "vpc-0a42917192f933430"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "peer_RouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f0aa7132f34f5325",
            "owner_id": "690683656197",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2aa15ffa6e30944",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "peer_RouteTable"
            },
            "vpc_id": "vpc-0937dad08efbf8f67"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.peer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_RouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06f58dc3e085b16ec",
            "owner_id": "690683656197",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03dce5f1c2de996c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_RouteTable"
            },
            "vpc_id": "vpc-0a42917192f933430"
          },
          "dependencies": [
            "aws_internet_gateway.igw_tf",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "peerroutetableassociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c73b03f98fb7a2b",
            "route_table_id": "rtb-0f0aa7132f34f5325",
            "subnet_id": "subnet-0a786b25d005a49c9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.peer_RouteTable",
            "aws_subnet.subnet_A",
            "aws_vpc.peer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetableassociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcdbf92e4a3eb865",
            "route_table_id": "rtb-06f58dc3e085b16ec",
            "subnet_id": "subnet-02d8a96ae38844361"
          },
          "dependencies": [
            "aws_internet_gateway.igw_tf",
            "aws_route_table.vpc_RouteTable",
            "aws_subnet.publicsubnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690683656197:security-group/sg-0141fd53882751610",
            "description": "inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0141fd53882751610",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG",
            "name_prefix": null,
            "owner_id": "690683656197",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a42917192f933430"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "S_G",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690683656197:security-group/sg-0999d8dbdbf1df880",
            "description": "allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0999d8dbdbf1df880",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "S_G",
            "name_prefix": null,
            "owner_id": "690683656197",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "S_G"
            },
            "timeouts": null,
            "vpc_id": "vpc-0937dad08efbf8f67"
          },
          "dependencies": [
            "aws_vpc.peer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690683656197:subnet/subnet-0b9226a5d371b9936",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b9226a5d371b9936",
            "map_public_ip_on_launch": false,
            "owner_id": "690683656197",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-0a42917192f933430"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690683656197:subnet/subnet-00e5dfcfff14584d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "20.0.2.0/24",
            "id": "subnet-00e5dfcfff14584d3",
            "map_public_ip_on_launch": false,
            "owner_id": "690683656197",
            "tags": {
              "Name": "Private_A"
            },
            "vpc_id": "vpc-0937dad08efbf8f67"
          },
          "dependencies": [
            "aws_vpc.peer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690683656197:subnet/subnet-02d8a96ae38844361",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02d8a96ae38844361",
            "map_public_ip_on_launch": false,
            "owner_id": "690683656197",
            "tags": {
              "Name": "publicsubnet"
            },
            "vpc_id": "vpc-0a42917192f933430"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690683656197:subnet/subnet-0a786b25d005a49c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "20.0.1.0/24",
            "id": "subnet-0a786b25d005a49c9",
            "map_public_ip_on_launch": false,
            "owner_id": "690683656197",
            "tags": {
              "Name": "subnet_A"
            },
            "vpc_id": "vpc-0937dad08efbf8f67"
          },
          "dependencies": [
            "aws_vpc.peer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690683656197:vpc/vpc-0a42917192f933430",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc6e47820ab4f259",
            "default_route_table_id": "rtb-0909fbe820a411b66",
            "default_security_group_id": "sg-02dda26dc8e61fa81",
            "dhcp_options_id": "dopt-86b302fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a42917192f933430",
            "instance_tenancy": "dedicated",
            "main_route_table_id": "rtb-0909fbe820a411b66",
            "owner_id": "690683656197",
            "tags": {
              "Name": "myvpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "peer_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690683656197:vpc/vpc-0937dad08efbf8f67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0bc058c78dd7598f4",
            "default_route_table_id": "rtb-0d1ccc9f3ad3d3d2e",
            "default_security_group_id": "sg-0b8e378e82382ed87",
            "dhcp_options_id": "dopt-86b302fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0937dad08efbf8f67",
            "instance_tenancy": "dedicated",
            "main_route_table_id": "rtb-0d1ccc9f3ad3d3d2e",
            "owner_id": "690683656197",
            "tags": {
              "Name": "peer_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-066b41963a6fc96e7",
            "peer_owner_id": "690683656197",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0937dad08efbf8f67",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "peering"
            },
            "vpc_id": "vpc-0a42917192f933430"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "aws_vpc.peer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "conn_accepter",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-066b41963a6fc96e7",
            "peer_owner_id": "690683656197",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0937dad08efbf8f67",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "conn_accepter"
            },
            "vpc_id": "vpc-0a42917192f933430",
            "vpc_peering_connection_id": "pcx-066b41963a6fc96e7"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "aws_vpc.peer_vpc",
            "aws_vpc_peering_connection.peering"
          ]
        }
      ]
    }
  ]
}